apps/ubys-core-web-app/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubys-core-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ubys-core-web-app.ubys.example.com
      secretName: ubys-core-web-app-prod-tls
  rules:
    - host: ubys-core-web-app.ubys.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubys-core-web-app
                port:
                  number: 80
